--- a/bin/GradesScene.fxml
+++ b/bin/GradesScene.fxml
@@ -5,39 +5,36 @@
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.chart.StackedBarChart?>
-<?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="340.0" prefWidth="600.0" stylesheets="@css/gradeStyling.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.GradesController">
+<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="340.0" minWidth="600.0" prefHeight="580.0" prefWidth="1200.0" stylesheets="@css/gradeStyling.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.GradesController">
    <children>
-      <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="340.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane fx:id="leftBg" prefHeight="340.0" prefWidth="180.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <AnchorPane fx:id="leftBg" prefHeight="340.0" prefWidth="180.0">
+            <ImageView id="pfp" fx:id="userPfpImg" fitHeight="75.0" fitWidth="75.0" layoutX="52.0" layoutY="31.0" pickOnBounds="true" AnchorPane.leftAnchor="45.0" AnchorPane.topAnchor="25.0">
+               <image>
+                  <Image url="@../graphics/tempImg.jpg" />
+               </image>
+            </ImageView>
+            <ImageView id="statCard" fx:id="statCardImg" fitHeight="306.0" fitWidth="216.0" layoutX="25.0" pickOnBounds="true">
+               <image>
+                  <Image url="@../graphics/tempImg.jpg" />
+               </image>
+            </ImageView>
+            <Text fx:id="usernameText" layoutX="50.0" layoutY="33.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="cardText" text="username" wrappingWidth="80.0" />
+            <Text fx:id="userStatsText" layoutX="45.0" layoutY="113.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="cardText" text="Stats blah blah blah " wrappingWidth="113.13671875" />
+            <Button id="exportBtn" fx:id="exportBtn" layoutX="2.0" layoutY="2.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#exportData" prefHeight="20.0" prefWidth="20.0" styleClass="leftBtn" AnchorPane.leftAnchor="4.0" AnchorPane.topAnchor="4.0" />
+            <Button id="importBtn" fx:id="importBtn" layoutX="2.0" layoutY="27.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#importData" prefHeight="20.0" prefWidth="20.0" styleClass="leftBtn" AnchorPane.leftAnchor="4.0" AnchorPane.topAnchor="24.0" />
+            <Button id="deleteBtn" fx:id="deleteBtn" layoutX="2.0" layoutY="52.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#delete" prefHeight="20.0" prefWidth="20.0" styleClass="leftBtn" AnchorPane.leftAnchor="4.0" AnchorPane.topAnchor="44.0" />
+            <Button id="logoutBtn" fx:id="logoutBtn" layoutX="4.0" layoutY="64.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#logout" prefHeight="20.0" prefWidth="20.0" styleClass="leftBtn" AnchorPane.leftAnchor="4.0" AnchorPane.topAnchor="64.0" />
+            <AnchorPane layoutY="306.0" prefHeight="250.0" prefWidth="250.0">
                <children>
-                  <ImageView id="pfp" fx:id="userPfpImg" fitHeight="40.0" fitWidth="40.0" layoutX="28.0" layoutY="8.0" pickOnBounds="true" AnchorPane.leftAnchor="38.0" AnchorPane.topAnchor="15.0">
-                     <image>
-                        <Image url="@../graphics/tempImg.jpg" />
-                     </image>
-                  </ImageView>
-                  <ImageView id="statCard" fx:id="statCardImg" fitHeight="170.0" fitWidth="120.0" layoutX="25.0" pickOnBounds="true">
-                     <image>
-                        <Image url="@../graphics/tempImg.jpg" />
-                     </image>
-                  </ImageView>
-                  <Text fx:id="usernameText" layoutX="76.0" layoutY="33.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="cardText" text="username" wrappingWidth="62.13671875" />
-                  <Text fx:id="userStatsText" layoutX="35.0" layoutY="69.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="cardText" text="Stats blah blah blah " wrappingWidth="113.13671875" />
-                  <Button id="exportBtn" fx:id="exportBtn" layoutX="2.0" layoutY="2.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#exportData" prefHeight="20.0" prefWidth="20.0" styleClass="leftBtn" AnchorPane.leftAnchor="4.0" AnchorPane.topAnchor="4.0" />
-                  <Button id="importBtn" fx:id="importBtn" layoutX="2.0" layoutY="27.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#importData" prefHeight="20.0" prefWidth="20.0" styleClass="leftBtn" AnchorPane.leftAnchor="4.0" AnchorPane.topAnchor="24.0" />
-                  <Button id="deleteBtn" fx:id="deleteBtn" layoutX="2.0" layoutY="52.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#delete" prefHeight="20.0" prefWidth="20.0" styleClass="leftBtn" AnchorPane.leftAnchor="4.0" AnchorPane.topAnchor="44.0" />
-                  <Button id="logoutBtn" fx:id="logoutBtn" layoutX="4.0" layoutY="98.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#logout" prefHeight="20.0" prefWidth="20.0" styleClass="leftBtn" AnchorPane.leftAnchor="4.0" AnchorPane.topAnchor="150.0" />
-                  <StackedBarChart fx:id="stackGraph" layoutX="2.0" layoutY="170.0" prefHeight="103.0" prefWidth="200.0">
+                  <StackedBarChart fx:id="stackGraph" prefHeight="103.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <xAxis>
                       <CategoryAxis side="BOTTOM" />
                     </xAxis>
@@ -45,8 +42,8 @@
                       <NumberAxis side="LEFT" />
                     </yAxis>
                   </StackedBarChart>
-                  <PieChart fx:id="pieGraph" layoutX="-3.0" layoutY="170.0" prefHeight="119.0" prefWidth="200.0" />
-                  <LineChart fx:id="lineGraph" layoutX="1.0" layoutY="170.0" prefHeight="103.0" prefWidth="200.0">
+                  <PieChart fx:id="pieGraph" prefHeight="119.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                  <LineChart fx:id="lineGraph" prefHeight="103.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <xAxis>
                       <CategoryAxis side="BOTTOM" />
                     </xAxis>
@@ -54,54 +51,15 @@
                       <NumberAxis side="LEFT" />
                     </yAxis>
                   </LineChart>
-                  <Button id="settingBtn" fx:id="graphSettingsBtn" layoutX="163.0" layoutY="295.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" />
                </children>
             </AnchorPane>
-            <ScrollPane fx:id="rightBg" fitToHeight="true" fitToWidth="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="340.0" prefWidth="442.0">
-              <content>
-                <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="340.0" prefWidth="380.0">
-                     <children>
-                        <Accordion layoutX="6.0" layoutY="7.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="256.0" prefWidth="374.0">
-                          <panes>
-                            <TitledPane animated="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="206.0" prefWidth="326.0" text="sem1">
-                              <content>
-                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                                       <children>
-                                          <Accordion prefHeight="87.0" prefWidth="373.0">
-                                            <panes>
-                                              <TitledPane animated="false" text="untitled 1">
-                                                   <content>
-                                                      <ScrollPane prefHeight="36.0" prefWidth="75.0">
-                                                        <content>
-                                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
-                                                        </content>
-                                                      </ScrollPane>
-                                                   </content>
-                                                </TitledPane>
-                                              <TitledPane animated="false" text="untitled 2" />
-                                            </panes>
-                                          </Accordion>
-                                       </children>
-                                    </AnchorPane>
-                              </content>
-                            </TitledPane>
-                            <TitledPane animated="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="sem2">
-                              <content>
-                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                              </content>
-                            </TitledPane>
-                              <TitledPane animated="false" layoutX="10.0" layoutY="35.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="sem3">
-                                 <content>
-                                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                                 </content>
-                              </TitledPane>
-                          </panes>
-                        </Accordion>
-                     </children>
-                  </AnchorPane>
-              </content>
-            </ScrollPane>
+            <Button id="settingBtn" fx:id="graphSettingsBtn" layoutX="216.0" layoutY="544.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" />
          </children>
-      </HBox>
+      </AnchorPane>
+      <ScrollPane fx:id="rightBg" fitToHeight="true" fitToWidth="true" layoutX="343.0" layoutY="45.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="340.0" prefWidth="442.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="250.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <content>
+          <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="598.0" prefWidth="650.0" />
+        </content>
+      </ScrollPane>
    </children>
 </AnchorPane>
