--- a/bin/GradesScene.fxml
+++ b/bin/GradesScene.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.chart.StackedBarChart?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -58,7 +59,18 @@
       </AnchorPane>
       <ScrollPane fx:id="rightBg" fitToHeight="true" fitToWidth="true" layoutX="343.0" layoutY="45.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="340.0" prefWidth="442.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="250.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <content>
-          <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="598.0" prefWidth="650.0" />
+          <AnchorPane fx:id="rightContent" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="598.0" prefWidth="650.0">
+               <children>
+                  <Button fx:id="addSem" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onMouseClicked="#addSem" text="+" />
+                  <TitledPane animated="false" layoutX="266.0" layoutY="347.0" text="untitled">
+                    <content>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                    </content>
+                  </TitledPane>
+                  <TitledPane animated="false" layoutX="39.0" layoutY="350.0" prefHeight="200.0" prefWidth="200.0" />
+                  <TitledPane animated="false" layoutX="266.0" layoutY="120.0" prefHeight="191.0" prefWidth="201.0" text="untitled" />
+               </children>
+            </AnchorPane>
         </content>
       </ScrollPane>
    </children>
