--- a/bin/LoginScene.fxml
+++ b/bin/LoginScene.fxml
@@ -2,13 +2,11 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ContextMenu?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Text?>
 
 <AnchorPane id="loginBg" fx:id="bgLoginScene" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="340.0" prefWidth="600.0" stylesheets="@css/loginStyling.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.LoginController">
    <children>
@@ -23,12 +21,7 @@
               </items>
             </ContextMenu>
          </contextMenu></TextField>
-      <ImageView id="noticeImg" fx:id="noticeImg" fitHeight="67.0" fitWidth="168.0" layoutX="200.0" layoutY="130.0" pickOnBounds="true" styleClass="noticeOff">
-         <image>
-            <Image url="@../graphics/tempImg.jpg" />
-         </image>
-      </ImageView>
-      <Text id="noticeText" fx:id="noticeText" layoutX="256.0" layoutY="142.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="noticeOff" text="Note:" wrappingWidth="113.13671875" />
+      <Label id="notice" fx:id="noticeText" alignment="TOP_LEFT" layoutX="193.0" layoutY="101.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="100.0" prefWidth="175.0" styleClass="noticeOff" text="Note:" wrapText="true" />
       <PasswordField fx:id="userpwIn" alignment="CENTER" layoutX="387.0" layoutY="125.0" prefHeight="25.0" prefWidth="150.0" promptText="Password" />
    </children>
 </AnchorPane>
