--- a/src/GradesScene.fxml
+++ b/src/GradesScene.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.chart.StackedBarChart?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -14,27 +15,26 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="340.0" minWidth="600.0" prefHeight="580.0" prefWidth="1200.0" stylesheets="@css/gradeStyling.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.GradesController">
+<AnchorPane id="gradeSceneBg" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="340.0" minWidth="600.0" prefHeight="580.0" prefWidth="1200.0" stylesheets="@css/gradeStyling.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.GradesController">
    <children>
-      <AnchorPane fx:id="leftBg" prefHeight="340.0" prefWidth="180.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane fx:id="leftBg" maxWidth="250.0" prefHeight="340.0" prefWidth="250.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <ImageView id="pfp" fx:id="userPfpImg" fitHeight="75.0" fitWidth="75.0" layoutX="52.0" layoutY="31.0" pickOnBounds="true" AnchorPane.leftAnchor="45.0" AnchorPane.topAnchor="25.0">
-               <image>
-                  <Image url="@../graphics/tempImg.jpg" />
-               </image>
-            </ImageView>
-            <ImageView id="statCard" fx:id="statCardImg" fitHeight="306.0" fitWidth="216.0" layoutX="25.0" pickOnBounds="true">
-               <image>
-                  <Image url="@../graphics/tempImg.jpg" />
-               </image>
-            </ImageView>
-            <Text fx:id="usernameText" layoutX="50.0" layoutY="33.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="cardText" text="username" wrappingWidth="80.0" />
-            <Text fx:id="userStatsText" layoutX="45.0" layoutY="113.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="cardText" text="Stats blah blah blah " wrappingWidth="113.13671875" />
+            <AnchorPane id="statisticCard" prefHeight="160.0" prefWidth="220.0" stylesheets="@css/gradeStyling.css" AnchorPane.rightAnchor="4.0" AnchorPane.topAnchor="4.0">
+               <children>
+                  <ImageView id="pfp" fx:id="userPfpImg" fitHeight="66.0" fitWidth="66.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" AnchorPane.leftAnchor="12.0" AnchorPane.topAnchor="12.0">
+                     <image>
+                        <Image url="@../graphics/tempImg.jpg" />
+                     </image>
+                  </ImageView>
+                  <Text fx:id="usernameText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="cardText" text="username" wrappingWidth="130.0" AnchorPane.leftAnchor="80.0" AnchorPane.topAnchor="12.0" />
+                  <Text fx:id="userStatsText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="cardText" text="Stats blah blah blah " wrappingWidth="198.0" AnchorPane.leftAnchor="12.0" AnchorPane.topAnchor="80.0" />
+               </children>
+            </AnchorPane>
             <Button id="exportBtn" fx:id="exportBtn" layoutX="2.0" layoutY="2.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#exportData" prefHeight="20.0" prefWidth="20.0" styleClass="leftBtn" AnchorPane.leftAnchor="4.0" AnchorPane.topAnchor="4.0" />
             <Button id="importBtn" fx:id="importBtn" layoutX="2.0" layoutY="27.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#importData" prefHeight="20.0" prefWidth="20.0" styleClass="leftBtn" AnchorPane.leftAnchor="4.0" AnchorPane.topAnchor="24.0" />
             <Button id="deleteBtn" fx:id="deleteBtn" layoutX="2.0" layoutY="52.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#delete" prefHeight="20.0" prefWidth="20.0" styleClass="leftBtn" AnchorPane.leftAnchor="4.0" AnchorPane.topAnchor="44.0" />
             <Button id="logoutBtn" fx:id="logoutBtn" layoutX="4.0" layoutY="64.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#logout" prefHeight="20.0" prefWidth="20.0" styleClass="leftBtn" AnchorPane.leftAnchor="4.0" AnchorPane.topAnchor="64.0" />
-            <AnchorPane layoutY="306.0" prefHeight="250.0" prefWidth="250.0">
+            <AnchorPane layoutY="306.0" prefHeight="250.0" prefWidth="250.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="168.0">
                <children>
                   <StackedBarChart fx:id="stackGraph" prefHeight="103.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <xAxis>
@@ -53,9 +53,19 @@
                       <NumberAxis side="LEFT" />
                     </yAxis>
                   </LineChart>
+                  <Button id="settingBtn" fx:id="graphSettingsBtn" layoutX="224.0" layoutY="225.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" />
                </children>
             </AnchorPane>
-            <Button id="settingBtn" fx:id="graphSettingsBtn" layoutX="216.0" layoutY="544.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="-13.0" layoutY="443.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="4.0" AnchorPane.leftAnchor="4.0">
+               <image>
+                  <Image url="@../graphics/mascot.png" />
+               </image>
+            </ImageView>
+            <Label id="notice" alignment="TOP_LEFT" graphicTextGap="5.0" layoutX="125.0" layoutY="462.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="75.0" prefWidth="200.0" text="Notice" wrapText="true" AnchorPane.bottomAnchor="45.0" AnchorPane.leftAnchor="45.0">
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+            </Label>
          </children>
       </AnchorPane>
       <ScrollPane fx:id="rightBg" hbarPolicy="NEVER" layoutX="297.0" layoutY="20.0" prefHeight="580.0" prefWidth="950.0" vbarPolicy="ALWAYS" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="250.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
